Implementations done, now have to fix all tests.