@@ -9,13 +9,15 @@ import com.agilebank.util.exceptions.AccountNotFoundException;
 import com.agilebank.util.exceptions.InvalidBalanceException;
 import com.agilebank.util.exceptions.InvalidPaginationParametersSpecifiedException;
 import com.agilebank.util.exceptions.InvalidSortByFieldSpecifiedException;
+import java.lang.reflect.Field;
 import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Locale;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -69,18 +71,18 @@ public class AccountService {
    * @return A {@link List} over all the accounts in the DB of the specified page and in the given sort order.
    */
   @Transactional(readOnly = true)
-  public List<AccountDto> getAllAccounts(Integer page, Integer pageSize, String sortByField, SortOrder sortOrder) 
+  public Page<AccountDto> getAllAccounts(Integer page, Integer pageSize, String sortByField, SortOrder sortOrder) 
   throws InvalidSortByFieldSpecifiedException, InvalidPaginationParametersSpecifiedException{
     if(page < 0 || pageSize < 1){
       throw new InvalidPaginationParametersSpecifiedException(page, pageSize);
     }
     List<String> accountFieldNames = Arrays.stream(AccountDto.class.getDeclaredFields()).
-            map(field->field.getName().toUpperCase(Locale.ROOT)).toList();
-    if(!accountFieldNames.contains(sortByField.toUpperCase(Locale.ROOT))){
+            map(Field::getName).toList();
+    if(!accountFieldNames.contains(sortByField)){
       throw new InvalidSortByFieldSpecifiedException(sortByField, accountFieldNames);
     }
-    Sort = sortOrder == SortOrder.ASC ? Sort.
-    return accountRepository.findAll().stream()
+    Sort sorter = (sortOrder == SortOrder.ASC ) ? Sort.by(sortByField).ascending() : Sort.by(sortByField).descending();
+    List<AccountDto> accounts = accountRepository.findAll(PageRequest.of(page, pageSize, sorter)).stream()
         .map(
             account ->
                 AccountDto.builder()
@@ -88,7 +90,8 @@ public class AccountService {
                     .balance(account.getBalance())
                     .currency(account.getCurrency())
                     .build())
-        .collect(Collectors.toList());
+        .toList();
+    return new PageImpl<>(accounts);
   }
 
   /**
